gcc/testsuite/rust/rustc/ui/const-generics/min_const_generics/const_default_first.rs
#![crate_type = "lib"]
#![allow(dead_code)]

struct Both<const N: usize=3, T> {
// { dg-error "" "" { target *-*-* } .-1 }
  v: T
}

